--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p><b></b></p>
     <div class="task-3">Сделайте функцию, которая принимает параметром число от 1 до 7, а возвращает день недели на русском языке. </div>
     <input type="text" class="input_1" placeholder="Sorry, but input don't work"/>
-    <button class="button-3">3</button>
+    <button class="button-3">3-й день недели. кнопка рабочая</button>
     <div class="hw-1_3">hw-1_3</div>
 </section>
   
@@ -43,7 +43,7 @@
 
 
     <!-- <script src="/js/script.js"></script> -->
-    <script src="/js/script_1.js"></script>
+    <script src="/js/script_hw-1.js"></script>
 
 </body>
 
