--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             href="/source/img/favicon/favicon-16x16.png" />
         <link rel="shortcut icon" href="/img/favicon/favicon.ico"
             type="image/x-icon" />
-        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="stylesheet" href="./css/style.css" />
         <title>Document</title>
     </head>
 
@@ -18,54 +18,54 @@
             <a href="#homework1">HW 1</a>
             <a href="#homework2">HW 2</a>
         </nav>
-        <section>
+        <!--  Homework 1 -->
+        <section class="box1">
             <a id="homework1">
                 <h1>Homework 1</h1>
             </a>
-        </section>
-        <section>
-            <div class="task-1">
-                Дана строка, например, '123456'. Переверните эту строку
-                (сделайте из нее
-                '654321') не используя цикл
-            </div>
-            <button class="button-1">123456</button>
-            <div class="hw-1_1">hw-1_1</div>
-        </section>
-        <section>
-            <div class="task-2">
-                Проверьте, что строка 'http://127.0.0.1:5500/index.html'
-                начинается на
-                http:// и заканчивается на .html.
-            </div>
-            <button class="button-2">2</button>
-            <div class="hw-1_2">hw-1_2</div>
-        </section>
-        <section>
-            <div class="task-3">
-                Сделайте функцию, которая принимает параметром число от 1 до 7,
-                а
-                возвращает день недели на русском языке.
-            </div>
-            <input type="text" class="input_1" placeholder="Sorry, but input
-                don't work" />
-            <button class="button-3">3-й день недели. кнопка рабочая</button>
-            <div class="hw-1_3">hw-1_3</div>
+            <section>
+                <div class="task-1">
+                    Дана строка, например, '123456'. Переверните эту строку
+                    (сделайте из нее
+                    '654321') не используя цикл
+                </div>
+                <button class="button-1">123456</button>
+                <div class="hw-1_1">hw-1_1</div>
+            </section>
+            <section>
+                <div class="task-2">
+                    Проверьте, что строка 'http://127.0.0.1:5500/index.html'
+                    начинается на http:// и заканчивается на .html.
+                </div>
+                <button class="button-2">2</button>
+                <div class="hw-1_2">hw-1_2</div>
+            </section>
+            <section>
+                <div class="task-3">
+                    Сделайте функцию, которая принимает параметром число от 1 до 7, а возвращает день недели на русском языке.
+                </div>
+                <input type="text" class="input_1" placeholder="Enter number" />
+                <button class="button-3">Press me</button>
+                <div class="hw-1_3">hw-1_3</div>
+            </section>
         </section>
 
-        <section>
+        <!--  Homework 2 -->
+        <section class="box2">
             <a id="homework2">
                 <h1>Homework 2</h1>
             </a>
-            <section>
+            <section class="boxInside">
                 <div class="hw_2-1_div1">
                     <h3>Шахматная доска</h3>
                 </div>
+                <input type="number" class="hw_2-1_input-1" placeholder="Enter number rows">
+                <input type="number" class="hw_2-1_input-2"placeholder="Enter number columns">
                 <button class="hw_2-1_button">Press me</button>
 
                 <div class="hw_2-1_output">Atention</div>
             </section>
-            <section>
+            <section class="boxInside">
                 <div class="hw_2-2_div1">
                     <h3>Факториал 4</h3>
                     <p>
@@ -74,18 +74,20 @@
                         3 = 3*2*1 = 6. Факториал от 4 будет 4*3*2*1 = 24.
                     </p>
                 </div>
+                <input type="number" class="hw_2-2_input-1" placeholder="Enter number">
                 <button class="hw_2-2_button">Press me</button>
                 <div class="hw_2-2_output">Atention</div>
             </section>
-            <section>
+            <section class="boxInside">
                 <div class="hw_2-3_div1">
                     <h3>Отсортируйте</h3>
                     <p>массив методом пузырьков. Sort() не использовать</p>
                 </div>
+               <p>[10, 5, 9, 7, 3, 7, 4, 2, 6, 8]</p>
                 <button class="hw_2-3_button">Press me</button>
                 <div class="hw_2-3_output">Atention</div>
             </section>
-            <section>
+            <section class="boxInside">
                 <div class="hw_2-4_div1">
                     <h3>Байты</h3>
                     <p>
@@ -98,8 +100,7 @@
                         найти количество байт в size.
                     </p>
                 </div>
-                <input type="number" class="hw_2-4_input" placeholder="Enter
-                    number">
+                <input type="number" class="hw_2-4_input" placeholder="Enter number">
                 <select id="unit" class="hw_2-4_2_input">
                     <option value="kb">Kb</option>
                     <option value="mb">Mb</option>
