--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <input type="number" class="hw_2-4_input" placeholder="Enter number">
                 <select id="unit" class="hw_2-4_2_input">
                     <option value="kb">Kb</option>
-                    <option value="mb">Mb</option>
+                    <option value="mb" selected>Mb</option>
                     <option value="gb">Gb</option>
                 </select>
                 <button class="hw_2-4_button">Press me</button>
