--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </section>
             <section class="boxInside">
                 <div class="hw_2-2_div1">
-                    <h3>Факториал 4</h3>
+                    <h3>Факториал</h3>
                     <p>
                         Написать функцию, которая считает факториал числа. Т.е.
                         факториал от
@@ -80,7 +80,7 @@
             </section>
             <section class="boxInside">
                 <div class="hw_2-3_div1">
-                    <h3>Отсортируйте</h3>
+                    <h3>Bubble</h3>
                     <p>массив методом пузырьков. Sort() не использовать</p>
                 </div>
                <p>[10, 5, 9, 7, 3, 7, 4, 2, 6, 8]</p>
