--- a/index.html
+++ b/index.html
@@ -1,120 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" type="image/png"
-            href="/source/img/favicon/favicon-16x16.png" />
-        <link rel="shortcut icon" href="/img/favicon/favicon.ico"
-            type="image/x-icon" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <title>Document</title>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./img/favicon/favicon-16x16.png" />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Document</title>
+</head>
 
-    <body>
-        <nav>
-            <a href="#homework1">HW 1</a>
-            <a href="#homework2">HW 2</a>
-        </nav>
-        <!--  Homework 1 -->
-        <section class="box1">
-            <a id="homework1">
-                <h1>Homework 1</h1>
-            </a>
-            <section>
-                <div class="task-1">
-                    Дана строка, например, '123456'. Переверните эту строку
-                    (сделайте из нее
-                    '654321') не используя цикл
-                </div>
-                <button class="button-1">123456</button>
-                <div class="hw-1_1">hw-1_1</div>
-            </section>
-            <section>
-                <div class="task-2">
-                    Проверьте, что строка 'http://127.0.0.1:5500/index.html'
-                    начинается на http:// и заканчивается на .html.
-                </div>
-                <button class="button-2">2</button>
-                <div class="hw-1_2">hw-1_2</div>
-            </section>
-            <section>
-                <div class="task-3">
-                    Сделайте функцию, которая принимает параметром число от 1 до 7, а возвращает день недели на русском языке.
-                </div>
-                <input type="text" class="input_1" placeholder="Enter number" />
-                <button class="button-3">Press me</button>
-                <div class="hw-1_3">hw-1_3</div>
-            </section>
+<body>
+    <nav>
+        <a href="#homework1">HW 1</a>
+        <a href="#homework2">HW 2</a>
+    </nav>
+    <!--  Homework 1 -->
+    <section class="box1">
+        <a id="homework1">
+            <h1>Homework 1</h1>
+        </a>
+        <section>
+            <div class="task-1">
+                Дана строка, например, '123456'. Переверните эту строку
+                (сделайте из нее
+                '654321') не используя цикл
+            </div>
+            <button class="button-1">123456</button>
+            <div class="hw-1_1">hw-1_1</div>
         </section>
-
-        <!--  Homework 2 -->
-        <section class="box2">
-            <a id="homework2">
-                <h1>Homework 2</h1>
-            </a>
-            <section class="boxInside">
-                <div class="hw_2-1_div1">
-                    <h3>Шахматная доска</h3>
-                </div>
-                <input type="number" class="hw_2-1_input-1" placeholder="Enter number rows">
-                <input type="number" class="hw_2-1_input-2"placeholder="Enter number columns">
-                <button class="hw_2-1_button">Press me</button>
-
-                <div class="hw_2-1_output">Atention</div>
-            </section>
-            <section class="boxInside">
-                <div class="hw_2-2_div1">
-                    <h3>Факториал</h3>
-                    <p>
-                        Написать функцию, которая считает факториал числа. Т.е.
-                        факториал от
-                        3 = 3*2*1 = 6. Факториал от 4 будет 4*3*2*1 = 24.
-                    </p>
-                </div>
-                <input type="number" class="hw_2-2_input-1" placeholder="Enter number">
-                <button class="hw_2-2_button">Press me</button>
-                <div class="hw_2-2_output">Atention</div>
-            </section>
-            <section class="boxInside">
-                <div class="hw_2-3_div1">
-                    <h3>Bubble</h3>
-                    <p>массив методом пузырьков. Sort() не использовать</p>
-                </div>
-               <p>[10, 5, 9, 7, 3, 7, 4, 2, 6, 8]</p>
-                <button class="hw_2-3_button">Press me</button>
-                <div class="hw_2-3_output">Atention</div>
-            </section>
-            <section class="boxInside">
-                <div class="hw_2-4_div1">
-                    <h3>Байты</h3>
-                    <p>
-                        В переменных size и unit хранятся размер и единицы
-                        измерения
-                        информации 120 и «Кб» соответственно. Зная что могут
-                        быть заданные
-                        Кб, Мб, Гб (кило-, мега- и гигабайты) и 1килобайт равен
-                        1024 байта,
-                        найти количество байт в size.
-                    </p>
-                </div>
-                <input type="number" class="hw_2-4_input" placeholder="Enter number">
-                <select id="unit" class="hw_2-4_2_input">
-                    <option value="kb">Kb</option>
-                    <option value="mb" selected>Mb</option>
-                    <option value="gb">Gb</option>
-                </select>
-                <button class="hw_2-4_button">Press me</button>
-                <div class="hw_2-4_output">Atention</div>
-            </section>
+        <section>
+            <div class="task-2">
+                Проверьте, что строка 'http://127.0.0.1:5500/index.html'
+                начинается на http:// и заканчивается на .html.
+            </div>
+            <button class="button-2">2</button>
+            <div class="hw-1_2">hw-1_2</div>
         </section>
+        <section>
+            <div class="task-3">
+                Сделайте функцию, которая принимает параметром число от 1 до 7, а возвращает день недели на русском
+                языке.
+            </div>
+            <input type="text" class="input_1" placeholder="Enter number" />
+            <button class="button-3">Press me</button>
+            <div class="hw-1_3">hw-1_3</div>
+        </section>
+    </section>
 
-        <!-- <script src="/js/script.js"></script> -->
-        <script src="./js/script_hw-1.js"></script>
-        <script src="./js/classWork2.js"></script>
-        <script src="./js/homework_2.js"></script>
-    </body>
+    <!--  Homework 2 -->
+    <section class="box2">
+        <a id="homework2">
+            <h1>Homework 2</h1>
+        </a>
+        <section class="boxInside">
+            <div class="hw_2-1_div1">
+                <h3>Шахматная доска</h3>
+            </div>
+            <input type="number" class="hw_2-1_input-1" placeholder="Enter number rows">
+            <input type="number" class="hw_2-1_input-2" placeholder="Enter number columns">
+            <button class="hw_2-1_button">Press me</button>
+
+            <div class="hw_2-1_output">Atention</div>
+        </section>
+        <section class="boxInside">
+            <div class="hw_2-2_div1">
+                <h3>Факториал</h3>
+                <p>
+                    Написать функцию, которая считает факториал числа. Т.е.
+                    факториал от
+                    3 = 3*2*1 = 6. Факториал от 4 будет 4*3*2*1 = 24.
+                </p>
+            </div>
+            <input type="number" class="hw_2-2_input-1" placeholder="Enter number">
+            <button class="hw_2-2_button">Press me</button>
+            <div class="hw_2-2_output">Atention</div>
+        </section>
+        <section class="boxInside">
+            <div class="hw_2-3_div1">
+                <h3>Bubble</h3>
+                <p>массив методом пузырьков. Sort() не использовать</p>
+            </div>
+            <p>[10, 5, 9, 7, 3, 7, 4, 2, 6, 8]</p>
+            <button class="hw_2-3_button">Press me</button>
+            <div class="hw_2-3_output">Atention</div>
+        </section>
+        <section class="boxInside">
+            <div class="hw_2-4_div1">
+                <h3>Байты</h3>
+                <p>
+                    В переменных size и unit хранятся размер и единицы
+                    измерения
+                    информации 120 и «Кб» соответственно. Зная что могут
+                    быть заданные
+                    Кб, Мб, Гб (кило-, мега- и гигабайты) и 1килобайт равен
+                    1024 байта,
+                    найти количество байт в size.
+                </p>
+            </div>
+            <input type="number" class="hw_2-4_input" placeholder="Enter number">
+            <select id="unit" class="hw_2-4_2_input">
+                <option value="kb">Kb</option>
+                <option value="mb" selected>Mb</option>
+                <option value="gb">Gb</option>
+            </select>
+            <button class="hw_2-4_button">Press me</button>
+            <div class="hw_2-4_output">Atention</div>
+        </section>
+    </section>
+
+    <script src="./js/script.js"></script>
+    <script src="./js/script_hw-1.js"></script>
+    <script src="./js/classWork2.js"></script>
+    <script src="./js/homework_2.js"></script>
+    <script src="./js/classWork3.js"></script>
+
+</body>
 
 </html>
