--- a/index.html
+++ b/index.html
@@ -167,12 +167,16 @@
 
         </section>
 
+        <section>
+            <div id="wrapper"></div>
+        </section>
 
         <script src="./js/script.js"></script>
         <script src="./js/script_hw-1.js"></script>
         <script src="./js/classWork2.js"></script>
         <script src="./js/homework_2.js"></script>
         <script src="./js/classWork3.js"></script>
+        <script src="./js/classWork4.js"></script>
         <script src="./js/homeWork3_Calc.js"></script>
 
     </body>
