--- a/index.html
+++ b/index.html
@@ -1,184 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./img/favicon-16x16.png" />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/menu.css" />
+    <link rel="stylesheet" href="./css/calculator.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.6.4/math.js"></script>
+    <title>Document</title>
+  </head>
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" type="image/png" href="./img/favicon-16x16.png" />
-        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"
-            />
-        <link rel="stylesheet" href="./css/style.css" />
-        <link rel="stylesheet" href="./css/menu.css" />
-        <link rel="stylesheet" href="./css/calculator.css" />
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.6.4/math.js"></script>
-        <title>Document</title>
-    </head>
+  <body>
+    <input
+      class="typeMenu"
+      type="checkbox"
+      id="navcheck"
+      role="button"
+      title="menu"
+    />
+    <label for="navcheck" aria-hidden="true" title="menu">
+      <span class="burger">
+        <span class="bar">
+          <span class="visuallyhidden">Menu</span>
+        </span>
+      </span>
+    </label>
+    <nav id="menu">
+      <a href="https://vikmillion.github.io/it-academy/">
+        This site on Github pages
+      </a>
+      <a href="#homework1">HW 1</a>
+      <a href="#homework2">HW 2</a>
+      <a href="#homework3">HW 3 Calculator</a>
+    </nav>
 
-    <body>
-        <input class="typeMenu" type="checkbox" id="navcheck" role="button"
-            title="menu">
-        <label for="navcheck" aria-hidden="true" title="menu">
-            <span class="burger">
-                <span class="bar">
-                    <span class="visuallyhidden">Menu</span>
-                </span>
-            </span>
-        </label>
-        <nav id="menu">
-            <a href="https://vikmillion.github.io/it-academy/">This site on
-                Github pages</a>
-            <a href="#homework1">HW 1</a>
-            <a href="#homework2">HW 2</a>
-            <a href="#homework3">HW 3 Calculator</a>
+    <!--  Homework 1 -->
+    <section class="box1">
+      <a id="homework1">
+        <h1>Homework 1</h1>
+      </a>
+      <section>
+        <div class="task-1">
+          Дана строка, например, '123456'. Переверните эту строку (сделайте из
+          нее '654321') не используя цикл
+        </div>
+        <button class="button-1">123456</button>
+        <div class="hw-1_1">hw-1_1</div>
+      </section>
+      <section>
+        <div class="task-2">
+          Проверьте, что строка 'http://127.0.0.1:5500/index.html' начинается на
+          http:// и заканчивается на .html.
+        </div>
+        <button class="button-2">2</button>
+        <div class="hw-1_2">hw-1_2</div>
+      </section>
+      <section>
+        <div class="task-3">
+          Сделайте функцию, которая принимает параметром число от 1 до 7, а
+          возвращает день недели на русском языке.
+        </div>
+        <input type="text" class="input_1" placeholder="Enter number" />
+        <button class="button-3">Press me</button>
+        <div class="hw-1_3">hw-1_3</div>
+      </section>
+    </section>
 
-        </nav>
+    <!--  Homework 2 -->
+    <section class="box2">
+      <a id="homework2">
+        <h1>Homework 2</h1>
+      </a>
+      <section class="boxInside">
+        <div class="hw_2-1_div1">
+          <h3>Шахматная доска</h3>
+        </div>
+        <input
+          type="number"
+          class="hw_2-1_input-1"
+          placeholder="Enter
+                    number rows"
+        />
+        <input
+          type="number"
+          class="hw_2-1_input-2"
+          placeholder="Enter
+                    number columns"
+        />
+        <button class="hw_2-1_button">Press me</button>
 
+        <div class="hw_2-1_output">Atention</div>
+      </section>
+      <section class="boxInside">
+        <div class="hw_2-2_div1">
+          <h3>Факториал</h3>
+          <p>
+            Написать функцию, которая считает факториал числа. Т.е. факториал от
+            3 = 3*2*1 = 6. Факториал от 4 будет 4*3*2*1 = 24.
+          </p>
+        </div>
+        <input
+          type="number"
+          class="hw_2-2_input-1"
+          placeholder="Enter
+                    number"
+        />
+        <button class="hw_2-2_button">Press me</button>
+        <div class="hw_2-2_output">Atention</div>
+      </section>
+      <section class="boxInside">
+        <div class="hw_2-3_div1">
+          <h3>Bubble</h3>
+          <p>массив методом пузырьков. Sort() не использовать</p>
+        </div>
+        <p>[10, 5, 9, 7, 3, 7, 4, 2, 6, 8]</p>
+        <button class="hw_2-3_button">Press me</button>
+        <div class="hw_2-3_output">Atention</div>
+      </section>
+      <section class="boxInside">
+        <div class="hw_2-4_div1">
+          <h3>Байты</h3>
+          <p>
+            В переменных size и unit хранятся размер и единицы измерения
+            информации 120 и «Кб» соответственно. Зная что могут быть заданные
+            Кб, Мб, Гб (кило-, мега- и гигабайты) и 1килобайт равен 1024 байта,
+            найти количество байт в size.
+          </p>
+        </div>
+        <input
+          type="number"
+          class="hw_2-4_input"
+          placeholder="Enter
+                    number"
+        />
+        <select id="unit" class="hw_2-4_2_input">
+          <option value="kb">Kb</option>
+          <option value="mb" selected>Mb</option>
+          <option value="gb">Gb</option>
+        </select>
+        <button class="hw_2-4_button">Press me</button>
+        <div class="hw_2-4_output">Atention</div>
+      </section>
+    </section>
+    <!--  Homework 3 -->
+    <section class="box3">
+      <a id="homework3">
+        <h1>Homework 3</h1>
+        <h3>Calculator</h3>
+      </a>
+      <section class="calc">
+        <output class="calc__result" id="result"></output>
 
-        <!--  Homework 1 -->
-        <section class="box1">
-            <a id="homework1">
-                <h1>Homework 1</h1>
-            </a>
-            <section>
-                <div class="task-1">
-                    Дана строка, например, '123456'. Переверните эту строку
-                    (сделайте из нее
-                    '654321') не используя цикл
-                </div>
-                <button class="button-1">123456</button>
-                <div class="hw-1_1">hw-1_1</div>
-            </section>
-            <section>
-                <div class="task-2">
-                    Проверьте, что строка 'http://127.0.0.1:5500/index.html'
-                    начинается на http:// и заканчивается на .html.
-                </div>
-                <button class="button-2">2</button>
-                <div class="hw-1_2">hw-1_2</div>
-            </section>
-            <section>
-                <div class="task-3">
-                    Сделайте функцию, которая принимает параметром число от 1 до
-                    7, а возвращает день недели на русском
-                    языке.
-                </div>
-                <input type="text" class="input_1" placeholder="Enter number" />
-                <button class="button-3">Press me</button>
-                <div class="hw-1_3">hw-1_3</div>
-            </section>
-        </section>
+        <button type="button" class="calc__btn">7</button>
+        <button type="button" class="calc__btn">8</button>
+        <button type="button" class="calc__btn">9</button>
+        <button type="button" class="calc__btn calc__btn_operator">+</button>
+        <button type="button" class="calc__btn">4</button>
+        <button type="button" class="calc__btn">5</button>
+        <button type="button" class="calc__btn">6</button>
+        <button type="button" class="calc__btn calc__btn_operator">-</button>
+        <button type="button" class="calc__btn">1</button>
+        <button type="button" class="calc__btn">2</button>
+        <button type="button" class="calc__btn">3</button>
+        <button type="button" class="calc__btn calc__btn_operator">*</button>
+        <button type="button" class="calc__btn calc__btn">0</button>
+        <button type="button" class="calc__btn">.</button>
+        <button type="button" class="calc__btn">00</button>
+        <button type="button" class="calc__btn calc__btn_operator">/</button>
+        <button type="button" class="calc__btn calc__btn_reset">C</button>
+        <button type="button" class="calc__btn calc__btn_equal">=</button>
+        <button type="button" class="calc__btn">(</button>
+        <button type="button" class="calc__btn">)</button>
+      </section>
+    </section>
 
-        <!--  Homework 2 -->
-        <section class="box2">
-            <a id="homework2">
-                <h1>Homework 2</h1>
-            </a>
-            <section class="boxInside">
-                <div class="hw_2-1_div1">
-                    <h3>Шахматная доска</h3>
-                </div>
-                <input type="number" class="hw_2-1_input-1" placeholder="Enter
-                    number rows">
-                <input type="number" class="hw_2-1_input-2" placeholder="Enter
-                    number columns">
-                <button class="hw_2-1_button">Press me</button>
+    <section>
+      <div id="wrapper"></div>
+    </section>
 
-                <div class="hw_2-1_output">Atention</div>
-            </section>
-            <section class="boxInside">
-                <div class="hw_2-2_div1">
-                    <h3>Факториал</h3>
-                    <p>
-                        Написать функцию, которая считает факториал числа. Т.е.
-                        факториал от
-                        3 = 3*2*1 = 6. Факториал от 4 будет 4*3*2*1 = 24.
-                    </p>
-                </div>
-                <input type="number" class="hw_2-2_input-1" placeholder="Enter
-                    number">
-                <button class="hw_2-2_button">Press me</button>
-                <div class="hw_2-2_output">Atention</div>
-            </section>
-            <section class="boxInside">
-                <div class="hw_2-3_div1">
-                    <h3>Bubble</h3>
-                    <p>массив методом пузырьков. Sort() не использовать</p>
-                </div>
-                <p>[10, 5, 9, 7, 3, 7, 4, 2, 6, 8]</p>
-                <button class="hw_2-3_button">Press me</button>
-                <div class="hw_2-3_output">Atention</div>
-            </section>
-            <section class="boxInside">
-                <div class="hw_2-4_div1">
-                    <h3>Байты</h3>
-                    <p>
-                        В переменных size и unit хранятся размер и единицы
-                        измерения
-                        информации 120 и «Кб» соответственно. Зная что могут
-                        быть заданные
-                        Кб, Мб, Гб (кило-, мега- и гигабайты) и 1килобайт равен
-                        1024 байта,
-                        найти количество байт в size.
-                    </p>
-                </div>
-                <input type="number" class="hw_2-4_input" placeholder="Enter
-                    number">
-                <select id="unit" class="hw_2-4_2_input">
-                    <option value="kb">Kb</option>
-                    <option value="mb" selected>Mb</option>
-                    <option value="gb">Gb</option>
-                </select>
-                <button class="hw_2-4_button">Press me</button>
-                <div class="hw_2-4_output">Atention</div>
-            </section>
-        </section>
-        <!--  Homework 3 -->
-        <section class="box3">
-            <a id="homework3">
-                <h1>Homework 3</h1>
-                <h3>Calculator</h3>
-            </a>
-            <section class="calc">
-                <output class="calc__result" id="result"></output>
-
-                <button type="button" class="calc__btn">7</button>
-                <button type="button" class="calc__btn">8</button>
-                <button type="button" class="calc__btn">9</button>
-                <button type="button" class="calc__btn calc__btn_operator">+</button>
-                <button type="button" class="calc__btn">4</button>
-                <button type="button" class="calc__btn">5</button>
-                <button type="button" class="calc__btn">6</button>
-                <button type="button" class="calc__btn calc__btn_operator">-</button>
-                <button type="button" class="calc__btn">1</button>
-                <button type="button" class="calc__btn">2</button>
-                <button type="button" class="calc__btn">3</button>
-                <button type="button" class="calc__btn calc__btn_operator">*</button>
-                <button type="button" class="calc__btn calc__btn">0</button>
-                <button type="button" class="calc__btn">.</button>
-                <button type="button" class="calc__btn">00</button>
-                <button type="button" class="calc__btn calc__btn_operator">/</button>
-                <button type="button" class="calc__btn calc__btn_reset">C</button>
-                <button type="button" class="calc__btn calc__btn_equal">=</button>
-                <button type="button" class="calc__btn">(</button>
-                <button type="button" class="calc__btn">)</button>
-            </section>
-
-        </section>
-
-        <section>
-            <div id="wrapper"></div>
-        </section>
-
-        <script src="./js/script.js"></script>
-        <script src="./js/script_hw-1.js"></script>
-        <script src="./js/classWork2.js"></script>
-        <script src="./js/homework_2.js"></script>
-        <script src="./js/classWork3.js"></script>
-        <script src="./js/classWork4.js"></script>
-        <script src="./js/homeWork3_Calc.js"></script>
-
-    </body>
-
+    <script src="./js/script.js"></script>
+    <script src="./js/script_hw-1.js"></script>
+    <script src="./js/classWork2.js"></script>
+    <script src="./js/homework_2.js"></script>
+    <script src="./js/classWork3.js"></script>
+    <script src="./js/classWork4.js"></script>
+    <script src="./js/homeWork3_Calc.js"></script>
+  </body>
 </html>
