--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./img/favicon-16x16.png" />
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="icon" type="image/png" href="./img/favicon-16x16.png"/>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/menu.css"/>
-    <link rel="stylesheet" href="./css/calculator.css"/>
+    <link rel="stylesheet" href="./css/calculator.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.6.4/math.js"></script>
     <title>Document</title>
   </head>
 
   <body>
-    <input
-      class="typeMenu"
-      type="checkbox"
-      id="navcheck"
-      role="button"
-      title="menu"
-    />
+    <input class="typeMenu" type="checkbox" id="navcheck" role="button"
+      title="menu" />
     <label for="navcheck" aria-hidden="true" title="menu">
       <span class="burger">
         <span class="bar">
@@ -35,6 +31,7 @@
       <a href="#homework1">HW 1</a>
       <a href="#homework2">HW 2</a>
       <a href="#homework3">HW 3 Calculator</a>
+      <a href="#homework4">HW 4</a>
     </nav>
 
     <!--  Homework 1 -->
@@ -78,18 +75,10 @@
         <div class="hw_2-1_div1">
           <h3>Шахматная доска</h3>
         </div>
-        <input
-          type="number"
-          class="hw_2-1_input-1"
-          placeholder="Enter
-                    number rows"
-        />
-        <input
-          type="number"
-          class="hw_2-1_input-2"
-          placeholder="Enter
-                    number columns"
-        />
+        <input type="number" class="hw_2-1_input-1" placeholder="Enter
+          number rows" />
+        <input type="number" class="hw_2-1_input-2" placeholder="Enter
+          number columns" />
         <button class="hw_2-1_button">Press me</button>
 
         <div class="hw_2-1_output">Atention</div>
@@ -102,12 +91,8 @@
             3 = 3*2*1 = 6. Факториал от 4 будет 4*3*2*1 = 24.
           </p>
         </div>
-        <input
-          type="number"
-          class="hw_2-2_input-1"
-          placeholder="Enter
-                    number"
-        />
+        <input type="number" class="hw_2-2_input-1" placeholder="Enter
+          number" />
         <button class="hw_2-2_button">Press me</button>
         <div class="hw_2-2_output">Atention</div>
       </section>
@@ -130,12 +115,8 @@
             найти количество байт в size.
           </p>
         </div>
-        <input
-          type="number"
-          class="hw_2-4_input"
-          placeholder="Enter
-                    number"
-        />
+        <input type="number" class="hw_2-4_input" placeholder="Enter
+          number" />
         <select id="unit" class="hw_2-4_2_input">
           <option value="kb">Kb</option>
           <option value="mb" selected>Mb</option>
@@ -177,16 +158,29 @@
       </section>
     </section>
 
-    <section>
-      <div id="wrapper"></div>
-    </section>
+    <section class="box4">
+      <a id="homework4"></a>
+     <h1>Homework 4</h1>
+        <input type="number" class="number" />
+        <button class="press">press</button>
+        <div id="outValue"></div>
+      </section>
 
-    <script src="./js/script.js"></script>
-    <script src="./js/script_hw-1.js"></script>
-    <script src="./js/classWork2.js"></script>
-    <script src="./js/homework_2.js"></script>
-    <script src="./js/classWork3.js"></script>
-    <script src="./js/classWork4.js"></script>
-    <script src="./js/homeWork3_Calc.js"></script>
-  </body>
-</html>
+
+      <section class="box5">
+        <div id="wrapper"></div>
+      </section>
+
+
+
+      <script src="./js/script.js"></script>
+      <script src="./js/script_hw-1.js"></script>
+      <script src="./js/classWork2.js"></script>
+      <script src="./js/homework_2.js"></script>
+      <script src="./js/classWork3.js"></script>
+      <script src="./js/classWork4.js"></script>
+      <script src="./js/homeWork3_Calc.js"></script>
+      <script src="./js/homeWork_4.js"></script>
+    </body>
+
+  </html>
