--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <section class="box4">
       <a id="homework4"></a>
      <h1>Homework 4</h1>
-        <input type="number" class="number" />
+        <input type="number" class="number" value="2"/>
         <button class="press">press</button>
         <div id="outValue"></div>
       </section>
