--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/menu.css"/>
     <link rel="stylesheet" href="./css/calculator.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.6.4/math.js"></script>
     <title>Document</title>
   </head>
 
@@ -180,7 +179,7 @@
       <script src="./js/classWork3.js"></script>
       <script src="./js/classWork4.js"></script>
       <script src="./js/homeWork3_Calc.js"></script>
-      <script src="./js/homeWork_4.js"></script>
+      <script src="./js/homework_4.js"></script>
     </body>
 
   </html>
